--- a/Digivance.Auth.Tests/Digivance.Auth.Tests.csproj
+++ b/Digivance.Auth.Tests/Digivance.Auth.Tests.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Digivance.Auth\Digivance.Auth.csproj" />
+  </ItemGroup>
+
 </Project>
