--- a/Digivance.Auth/Digivance.Auth.csproj
+++ b/Digivance.Auth/Digivance.Auth.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Digivance.Core" Version="0.0.2-alpha" />
+  </ItemGroup>
+
 </Project>
